add styles config

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,3 +1,7 @@
+//Utils
+@import './src/styles/utils/margins'
+@import './src/styles/utils/z-index'
+
 //Abstracts
 @import './src/styles/abstracts/variables'
 
