add config && add theme

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,12 +1,4 @@
-//Utils
-@import './src/styles/utils/margins'
-@import './src/styles/utils/z-index'
-
-//Abstracts
-@import './src/styles/abstracts/variables'
-
-//Base
-@import './src/styles/base/typography'
+@import './config'
 
 //Themes
 @import './src/styles/themes/global'
