--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -6,7 +6,7 @@
 html
   font-size: 62.5%
   font-display: swap
-  font-family: 'Muli', sans-serif
+  font-family: $muli
 
 @media screen and (max-width: 1800px)
   html
@@ -55,8 +55,8 @@ ul
   list-style: none
 
 .wrap
-  padding-left: 14rem
-  padding-right: 14rem
+  padding-left: 37.5rem
+  padding-right: 37.5rem
 
 @media screen and (max-width: 767px)
   .wrap
