--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -4,49 +4,11 @@
   padding: 0
 
 html
-  font-size: 62.5%
-  font-display: swap
   font-family: $muli
 
-@media screen and (max-width: 1800px)
-  html
-    font-size: 55%
-    font-size: 8.8px
-
-@media screen and (max-width: 1599px)
-  html
-    font-size: 45%
-    font-size: 7.2px
-
-@media screen and (max-width: 1400px)
-  html
-    font-size: 43%
-    font-size: 6.88px
-
-@media screen and (max-width: 1300px)
-  html
-    font-size: 40%
-    font-size: 6.4px
-
-@media screen and (max-width: 1200px)
-  html
-    font-size: 37%
-    font-size: 5.92px
-
-@media screen and (max-width: 1100px)
-  html
-    font-size: 33%
-    font-size: 5.28px
-
-@media screen and (max-width: 992px)
-  html
-    font-size: 25.5%
-    font-size: 4.08px
-
 body
-  font-size: 14px
-  font-size: 1.4rem
   overflow-x: hidden
+  background-color: $bg
 
 a
   text-decoration: none
@@ -55,8 +17,9 @@ ul
   list-style: none
 
 .wrap
-  padding-left: 37.5rem
-  padding-right: 37.5rem
+  padding-left: 40px
+  padding-right: 40px
+  max-width: 1250px
 
 @media screen and (max-width: 767px)
   .wrap
