--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -4,6 +4,7 @@
 
 //Abstracts
 @import './src/styles/abstracts/variables'
+@import './src/styles/abstracts/mixins'
 
 //Base
 @import './src/styles/base/typography'
