--- a/src/styles/base/_typography.sass
+++ b/src/styles/base/_typography.sass
@@ -1,2 +1,101 @@
 $muli: 'Muli', sans-serif
 $oswald: 'Oswald', sans-serif
+
+$light: 300
+$regular: 400
+$medium: 500
+$semiBold: 600
+$bold: 700
+$black: 900
+
+
+h1,
+h2,
+h3
+  font-weight: $light
+  color: $white
+  line-height: 1.2
+  text-transform: uppercase
+
+  span
+    color: $main
+
+h1
+  font-size: 80px
+  letter-spacing: 25.6px
+
+h2
+  font-size: 60px
+  letter-spacing: 19.2px
+
+h3
+  font-size: 35px
+  letter-spacing: 11.2
+
+@media screen and (max-width: 1599px)
+  h1
+    font-size: 70px
+    letter-spacing: 23px
+
+  h2
+    font-size: 53px
+    letter-spacing: 16px
+
+  h3
+    font-size: 30px
+    letter-spacing: 10px
+
+
+@media screen and (max-width: 1199px)
+  h1
+    font-size: 55px
+    letter-spacing: 20px
+
+  h2
+    font-size: 45px
+    letter-spacing: 14px
+
+  h3
+    font-size: 30px
+    letter-spacing: 10px
+
+@media screen and (max-width: 767px)
+  h1
+    font-size: 45px
+    letter-spacing: 15px
+
+  h2
+    font-size: 45px
+    letter-spacing: 14px
+
+  h3
+    font-size: 30px
+    letter-spacing: 10px
+
+@media screen and (max-width: 599px)
+  h1
+    font-size: 25px
+    letter-spacing: 10px
+
+  h2
+    font-size: 45px
+    letter-spacing: 14px
+
+  h3
+    font-size: 30px
+    letter-spacing: 10px
+
+
+@media screen and (max-width: 359px)
+  h1
+    font-size: 22px
+    letter-spacing: 10px
+
+  h2
+    font-size: 45px
+    letter-spacing: 14px
+
+  h3
+    font-size: 30px
+    letter-spacing: 10px
+
