--- a/src/components/layout/Navbar/Navbar.module.sass
+++ b/src/components/layout/Navbar/Navbar.module.sass
@@ -1,10 +1,10 @@
 @import './src/styles/config'
 
 .navbar
+  position: fixed
   display: flex
-  padding: 48px
-
-
+  padding: 20px
+  z-index: 10
 
   .main
     display: flex
@@ -12,4 +12,5 @@
   .logo,
   .mainMenu,
   .phone
+    display: flex
     padding: 0
