--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -9,6 +9,7 @@ html
 body
   overflow-x: hidden
   background-color: $bg
+  height: 300vh
 
 a
   text-decoration: none
@@ -20,8 +21,9 @@ ul
   padding-left: 40px
   padding-right: 40px
   max-width: 1250px
+  margin: 0 auto
 
 @media screen and (max-width: 767px)
   .wrap
-    padding-left: 20px
-    padding-right: 20px
+    padding-left: 10px
+    padding-right: 10px
