--- a/src/components/layout/Navbar/Navbar.module.sass
+++ b/src/components/layout/Navbar/Navbar.module.sass
@@ -41,6 +41,9 @@ $burgerBarHeight: 2px
         letter-spacing: 4px
         margin-left: 30px
 
+        &.menuPhone
+          display: none
+
 @media screen and (max-width: 1599px)
   .navbar
     padding: 40px
@@ -64,10 +67,23 @@ $burgerBarHeight: 2px
       .burger
         display: block
         width: 25px
+        background: none
+        border: none
+        cursor: pointer
+        z-index: 2
 
         &.active
           .burgerBar
-            background-color: red
+            width: 80% !important
+
+            &:nth-child(1)
+              transform: translateY(300%) rotate(45deg)
+
+            &:nth-child(2)
+              opacity: 0
+
+            &:nth-child(3)
+              transform: translateY(-300%) rotate(-45deg)
 
         &:hover
           .burgerBar,
@@ -91,17 +107,69 @@ $burgerBarHeight: 2px
           &:nth-child(3)
             width: 80%
 
+          &:nth-last-child(1)
+            margin: 0
+
       .mainMenu
-        display: none
+        width: 100%
+        height: 100vh
         position: absolute
         top: 0
         left: 0
         right: 0
         bottom: 0
+        padding: 50px
+        flex-direction: column
         background-color: $main
+        transform: translateX(100%)
+        overflow: hidden
+        opacity: 0
+        transition: .5s ease
+
+        &.active
+          transform: translateX(0)
+          opacity: 1
+
+          .menuItem
+            transform: translateX(0) !important
+            opacity: 1
+
+
+        @for $i from 1 through 10
+          .menuItem
+            font-size: 22px
+            margin: 0 0 20px 0
+            opacity: 0
+
+            &:nth-child(#{$i})
+              transition: transform #{$i * 0.3}s .2s ease, opacity #{$i * 0.3}s .3s ease
+              transform: translateX(#{$i * -30}px)
+
+@media screen and (max-width: 599px)
+  .navbar
+    padding: 15px
+
+    .logoWrap
+      .logo
+        max-height: 25px
+
+    .main
+      justify-content: flex-end
+
+      .phone
+        display: none
+
+      .mainMenu
+        padding: 40px
 
         .menuItem
-          font-size: 13px
-          font-weight: $light
-          letter-spacing: 4px
-          margin-left: 30px
+          &.menuPhone
+            display: block
+
+        .phone
+          display: block
+          margin-top: 20px
+          font-size: 16px
+
+
+
