add title and article component

--- a/src/styles/base/_typography.sass
+++ b/src/styles/base/_typography.sass
@@ -18,12 +18,14 @@ a
 h1,
 h2,
 h3
-  font-weight: $light
+  font-weight: $regular
   color: $white
   line-height: 1.2
   text-transform: uppercase
 
-  span
+  span,
+  strong
+    font-weight: $regular
     color: $main
 
 h1
