--- a/src/components/layout/Text/Article/Article.module.sass
+++ b/src/components/layout/Text/Article/Article.module.sass
@@ -2,3 +2,103 @@
 
 .article
   color: white
+
+  p
+    font-size: 16px
+    margin-bottom: 10px
+    font-weight: $light
+
+    &:nth-last-child(1)
+      margin-bottom: 0 !important
+
+  &.xl
+    p
+      font-size: 24px
+      margin-bottom: 40px
+      line-height: 2
+
+  &.l
+    p
+      font-size: 18px
+
+@media screen and (max-width: 1599px)
+  .article
+    p
+      font-size: 16px
+      margin-bottom: 10px
+      font-weight: $light
+
+      &:nth-last-child(1)
+        margin-bottom: 0 !important
+
+    &.xl
+      p
+        font-size: 20px
+        margin-bottom: 40px
+        line-height: 2
+
+    &.l
+      p
+        font-size: 18px
+
+@media screen and (max-width: 1199px)
+  .article
+    p
+      font-size: 16px
+      margin-bottom: 10px
+      font-weight: $light
+
+      &:nth-last-child(1)
+        margin-bottom: 0 !important
+
+    &.xl
+      p
+        font-size: 20px
+        margin-bottom: 40px
+        line-height: 2
+
+    &.l
+      p
+        font-size: 18px
+
+@media screen and (max-width: 767px)
+  .article
+    p
+      font-size: 16px
+      margin-bottom: 10px
+      font-weight: $light
+
+      &:nth-last-child(1)
+        margin-bottom: 0 !important
+
+    &.xl
+      p
+        font-size: 18px
+        margin-bottom: 40px
+        line-height: 2
+
+    &.l
+      p
+        font-size: 18px
+
+@media screen and (max-width: 599px)
+  .article
+    p
+      font-size: 16px
+      margin-bottom: 10px
+      font-weight: $light
+
+      &:nth-last-child(1)
+        margin-bottom: 0 !important
+
+    &.xl
+      p
+        font-size: 18px
+        margin-bottom: 40px
+        line-height: 2
+
+    &.l
+      p
+        font-size: 18px
+
+
