--- a/src/components/layout/PageOrnament/PageOrnament.module.sass
+++ b/src/components/layout/PageOrnament/PageOrnament.module.sass
@@ -4,12 +4,13 @@
   display: flex
   justify-content: space-between
   width: 100%
-  height: 100vh
+  height: 100%
   position: absolute
   top: 0
+  bottom: 0
   left: 50%
   transform: translateX(-50%)
-  z-index: -1
+  z-index: 2
 
   span
     display: block
