--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -16,11 +16,12 @@ a
 ul
   list-style: none
 
-.wrap
+.wraps
   padding-left: 40px
   padding-right: 40px
   max-width: 1250px
   margin: 0 auto
+  //overflow-x: hidden
 
 @media screen and (max-width: 767px)
   .wrap
