--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -21,9 +21,9 @@ ul
   padding-right: 40px
   max-width: 1250px
   margin: 0 auto
-  //overflow-x: hidden
 
 @media screen and (max-width: 767px)
   .wrap
     padding-left: 20px
     padding-right: 20px
+    overflow-x: hidden
