add destkop blog tile

--- a/src/components/layout/Navbar/Navbar.module.sass
+++ b/src/components/layout/Navbar/Navbar.module.sass
@@ -120,7 +120,7 @@ $burgerBarHeight: 2px
         bottom: 0
         padding: 50px
         flex-direction: column
-        background-color: $main
+        background-color: $second
         transform: translateX(100%)
         overflow: hidden
         opacity: 0
