--- a/src/styles/abstracts/_variables.sass
+++ b/src/styles/abstracts/_variables.sass
@@ -1,10 +1,15 @@
 // Colors
 $white: #FFF
 $black: #000
+
 $gray: #FEFEFE
+$gray2: #6F6F6F
+$gray3: #434343
+$gray4: #373737
 
 $bg: #272727
 
 $main: #C5A47E
+$second: #666666
 
 
