--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -17,6 +17,7 @@ $marginTop: 115px
     left: 50%
     transform: translate(-50%, -50%)
     height: calc(100% + #{$marginTop})
+    object-fit: cover
 
   .headerWrap
     display: flex
