fix proptypes problems

--- a/src/components/Article/ArticleTile/ArticleTile.module.sass
+++ b/src/components/Article/ArticleTile/ArticleTile.module.sass
@@ -15,6 +15,7 @@
     max-height: 508px
     overflow: hidden
     @include overlay($second, 0.5, 0, unset)
+    @include imagePlaceholder()
 
     .img
       object-fit: cover
