--- a/src/styles/abstracts/_mixins.sass
+++ b/src/styles/abstracts/_mixins.sass
@@ -37,3 +37,6 @@
 
 @mixin backgroundImage()
   background: center center / cover no-repeat $main
+
+@mixin imagePlaceholder()
+  background-color: $main
