add link button and article tile desktop styles

--- a/src/styles/base/_typography.sass
+++ b/src/styles/base/_typography.sass
@@ -15,9 +15,6 @@ a
   &:hover
     color: $main
 
-.link
-  color: $main
-
 h1,
 h2,
 h3
@@ -26,6 +23,10 @@ h3
   line-height: 1.2
   text-transform: uppercase
 
+h1,
+h2,
+h3,
+p
   span,
   strong
     font-weight: $regular
