--- a/src/components/Article/ArticleTile/ArticleTile.module.sass
+++ b/src/components/Article/ArticleTile/ArticleTile.module.sass
@@ -9,10 +9,10 @@
   .imgWrap
     display: block
     position: relative
-    min-width: 39vw
     max-width: 750px
-    height: 26.45vw
+    min-width: 750px
     max-height: 508px
+    min-height: 508px
     overflow: hidden
     @include overlay($second, 0.5, 0, unset)
     @include imagePlaceholder()
@@ -38,4 +38,12 @@
     justify-content: flex-end
     border-top: 1px solid $gray3
     padding-top: 2.3vw
+
+@media screen and (max-width: 1266px)
+  .articleTileWrap
+    .imgWrap
+      max-width: 58.96vw
+      min-width: 58.96vw
+      max-height: 40.15vw
+      min-height: 40.15vw
 
