add gatsby background image && style article tile tablet

--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -12,12 +12,11 @@ $marginTop: 115px
   overflow: hidden
 
   .bgcImg
-    position: absolute
-    top: calc(50% - #{$marginTop})
-    left: 50%
-    transform: translate(-50%, -50%)
-    height: calc(100% + #{$marginTop})
-    object-fit: cover
+    width: 100%
+    height: 100%
+    background-position: center center
+    background-size: cover
+    background-repeat: no-repeat
 
   .headerWrap
     display: flex
