--- a/src/components/Article/ArticleTile/ArticleTile.module.sass
+++ b/src/components/Article/ArticleTile/ArticleTile.module.sass
@@ -18,9 +18,11 @@
     @include imagePlaceholder()
 
     .img
-      object-fit: cover
       width: 100%
       height: 100%
+      background-position: center center
+      background-repeat: no-repeat
+      background-size: cover
 
   .descriptionWrap
     display: flex
@@ -33,17 +35,43 @@
     .text
       margin-bottom: 20px
 
+    .tags
+      max-height: 80px
+      overflow: hidden
+
+    .text
+      @include cutText(6)
+
   .tileFooter
     display: flex
     justify-content: flex-end
     border-top: 1px solid $gray3
     padding-top: 2.3vw
+    margin-top: 20px
 
 @media screen and (max-width: 1266px)
   .articleTileWrap
     .imgWrap
-      max-width: 58.96vw
+      max-width: 100%
       min-width: 58.96vw
-      max-height: 40.15vw
+      max-height: 100%
       min-height: 40.15vw
 
+    .tileFooter
+      padding-top: 30px
+
+@media screen and (max-width: 1199px)
+  .articleTileWrap
+    .imgWrap
+      max-width: 100%
+      min-width: 50vw
+      max-height: 100%
+      min-height: 300px
+
+@media screen and (max-width: 992px)
+  .articleTileWrap
+    flex-direction: column
+
+    .imgWrap
+      height: 40vw
+      min-height: 185px
