--- a/src/styles/themes/_global.sass
+++ b/src/styles/themes/_global.sass
@@ -22,8 +22,13 @@ ul
   max-width: 1250px
   margin: 0 auto
 
+@media screen and (max-width: 992px)
+  .wrap
+    padding-left: 30px
+    padding-right: 30px
+    overflow-x: hidden
+
 @media screen and (max-width: 767px)
   .wrap
     padding-left: 20px
     padding-right: 20px
-    overflow-x: hidden
