add article tile mobile styles

--- a/src/components/Article/ArticleList/ArticleList.module.sass
+++ b/src/components/Article/ArticleList/ArticleList.module.sass
@@ -5,3 +5,11 @@
 
   &:nth-last-child(1)
     margin-bottom: 0
+
+@media screen and (max-width: 1266px)
+  .articleTile
+    margin-bottom: 9.87vw
+
+@media screen and (max-width: 599px)
+  .articleTile
+    margin-bottom: 30px
