--- a/src/components/shared/Section/Section.module.sass
+++ b/src/components/shared/Section/Section.module.sass
@@ -2,3 +2,11 @@
 
 .section
   margin-bottom: 90px
+
+@media screen and (max-width: 992px)
+  .section
+    margin-bottom: 70px
+
+@media screen and (max-width: 767px)
+  .section
+    margin-bottom: 50px
