--- a/src/components/shared/Tags/Tags.module.sass
+++ b/src/components/shared/Tags/Tags.module.sass
@@ -16,3 +16,10 @@
       color: $gray2
       background-color: $gray3
       border-radius: 15px
+
+@media screen and (max-width: 599px)
+  .tagList
+    .tagItem
+      .tag
+        padding: 8px 10px
+        font-size: 11px
