--- a/src/components/Article/ArticleTile/ArticleTile.module.sass
+++ b/src/components/Article/ArticleTile/ArticleTile.module.sass
@@ -75,3 +75,19 @@
     .imgWrap
       height: 40vw
       min-height: 185px
+
+@media screen and (max-width: 599px)
+  .articleTileWrap
+    .imgWrap
+      min-height: 210px
+
+    .descriptionWrap
+      padding: 25px
+
+      .tags
+        max-height: 68px
+        margin-bottom: 10px
+
+    .tileFooter
+      padding-top: 20px
+      margin-top: 10px
