--- a/src/components/Article/ArticleTile/ArticleTile.module.sass
+++ b/src/components/Article/ArticleTile/ArticleTile.module.sass
@@ -46,7 +46,7 @@
     display: flex
     justify-content: flex-end
     border-top: 1px solid $gray3
-    padding-top: 2.3vw
+    padding-top: 44px
     margin-top: 20px
 
 @media screen and (max-width: 1266px)
@@ -58,7 +58,7 @@
       min-height: 40.15vw
 
     .tileFooter
-      padding-top: 30px
+      padding-top: 3.40vw
 
 @media screen and (max-width: 1199px)
   .articleTileWrap
@@ -69,6 +69,11 @@
       min-height: 300px
 
 @media screen and (max-width: 992px)
+  .articleTileWrap
+    .descriptionWrap
+      padding: 35px
+
+@media screen and (max-width: 767px)
   .articleTileWrap
     flex-direction: column
 
