fix header position && ornament

--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -10,8 +10,12 @@ $marginTop: 115px
   max-height: 1240px
   min-height: 720px
   overflow: hidden
+  z-index: -5
 
   .bgcImg
+    position: absolute !important
+    top: 0
+    left: 0
     width: 100%
     height: 100%
     background-position: center center
