--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -30,6 +30,9 @@ $marginTop: 115px
     color: $white
     padding-top: calc(18.5vw - #{$marginTop})
 
+    h1
+      transform: translateX(9%)
+
 @media screen and (max-width: 767px)
   .header
     max-height: 100vh
