config article prismic

--- a/src/components/layout/Button/Button.module.sass
+++ b/src/components/layout/Button/Button.module.sass
@@ -17,3 +17,10 @@
 
   &:hover
     opacity: 0.7
+
+@media screen and (max-width: 767px)
+  .button
+    border-radius: 28px
+    font-size: 12px
+    letter-spacing: 1.5px
+    padding: 14px 30px
