--- a/src/components/shared/Contact/Contact.module.sass
+++ b/src/components/shared/Contact/Contact.module.sass
@@ -1,1 +1,30 @@
 @import './src/styles/config'
+
+.contactWrap
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+
+  .contactInfo
+    display: flex
+    flex-direction: column
+
+    a,
+    p
+      font-size: 18px
+      line-height: 38px
+      font-weight: $light
+
+    p
+      color: $white
+
+    .email,
+    p
+      opacity: 0.8
+
+    .phone
+      font-size: 16px
+      letter-spacing: 5.12px
+      font-weight: $bold
+
+
