hide scroll navbar

--- a/src/components/Article/ArticleList/ArticleList.module.sass
+++ b/src/components/Article/ArticleList/ArticleList.module.sass
@@ -2,10 +2,10 @@
 
 .articleList
   .articleTile
-    margin-bottom: 125px
+    margin-top: 125px
 
-  .articleTile:nth-last-child(1)
-    margin-bottom: 0
+  .articleTile:nth-child(1)
+    margin-top: 0
 
   .buttonWrap
     display: flex
@@ -16,9 +16,9 @@
 @media screen and (max-width: 1266px)
   .articleList
     .articleTile
-      margin-bottom: 9.87vw
+      margin-top: 9.87vw
 
 @media screen and (max-width: 599px)
   .articleList
     .articleTile
-      margin-bottom: 30px
+      margin-top: 30px
