--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -12,6 +12,25 @@ $marginTop: 115px
   overflow: hidden
   z-index: -5
 
+  .socials
+    display: flex
+    flex-direction: column
+    justify-content: flex-end
+    position: absolute
+    top: 0
+    left: 0
+    background-color: $gray5
+    width: 365px
+    height: 399px
+    z-index: 4
+    padding: 85px
+
+    .socialIcon
+      font-size: 30px
+      margin-top: 30px
+      color: $gray2
+      cursor: pointer
+
   .bgcImg
     position: absolute !important
     top: 0
