--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -2,3 +2,7 @@
 
 //Themes
 @import './src/styles/themes/global'
+
+// Components
+@import './src/styles/components/contact/contact'
+@import './src/styles/components/contact/contact'
