--- a/src/styles/abstracts/_variables.sass
+++ b/src/styles/abstracts/_variables.sass
@@ -6,6 +6,9 @@ $gray: #FEFEFE
 $gray2: #6F6F6F
 $gray3: #434343
 $gray4: #373737
+$gray5: #2b2b2b
+$gray6: #ffb370
+$gray7: #323232
 
 $bg: #272727
 
