--- a/src/styles/base/_buttons.sass
+++ b/src/styles/base/_buttons.sass
@@ -24,5 +24,52 @@
 
     &:hover
       opacity: .8
+
       &::after
         transform: translate(-20%, -50%)
+
+.button
+  display: block
+  border: none
+  border-radius: 28px
+  background-color: $gray4
+  color: $white
+  font-size: 14px
+  font-weight: $regular
+  text-transform: uppercase
+  line-height: 1
+  letter-spacing: 1.68px
+  padding: 19px 50px
+  cursor: pointer
+  transition: .3s ease
+
+  &:hover
+    opacity: 0.7
+
+  &.send
+    position: relative
+    background-color: $main
+    padding: 19px 54px 19px 25px
+
+    &:hover::after
+      transform: translate(20%, -50%)
+
+    &::after
+      content: ''
+      display: block
+      position: absolute
+      top: 50%
+      right: 30px
+      width: 15px
+      height: 15px
+      background: url('../../../static/assets/arrow_white.svg') center center / 13px no-repeat
+      transform: translateY(-50%)
+      transition: .3s ease
+
+@media screen and (max-width: 767px)
+  .button
+    border-radius: 28px
+    font-size: 12px
+    letter-spacing: 1.5px
+    padding: 14px 30px
+
