--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -25,9 +25,19 @@ $marginTop: 115px
     z-index: 4
     padding: 85px
 
+    &::before
+      content: ''
+      display: block
+      position: absolute
+      top: 135px
+      left: 95px
+      background-color: $gray2
+      height: 52px
+      width: 1px
+
     .socialIcon
-      font-size: 30px
-      margin-top: 30px
+      font-size: 18px
+      margin-top: 25px
       color: $gray2
       cursor: pointer
 
@@ -52,7 +62,55 @@ $marginTop: 115px
     h1
       transform: translateX(9%)
 
+@media screen and (max-width: 1599px)
+  .header
+    .socials
+      width: 285px
+      height: 320px
+      padding: 60px 34px
+
+      &::before
+        top: 120px
+        left: 40px
+        height: 45px
+        width: 1px
+
+@media screen and (max-width: 1199px)
+  .header
+    .socials
+      width: 225px
+      height: 270px
+      padding: 40px 23px
+
+      &::before
+        top: 90px
+        left: 30px
+        height: 45px
+        width: 1px
+
 @media screen and (max-width: 767px)
   .header
     max-height: 100vh
     min-height: 450px
+
+    .socials
+      padding: 40px 13px
+
+      &::before
+        left: 21px
+
+@media screen and (max-width: 599px)
+  .header
+    .socials
+      width: auto
+      height: 140px
+      padding: 14px
+
+      &::before
+        display: none
+
+      .socialIcon
+        font-size: 18px
+        margin-top: 15px
+        color: $gray2
+        cursor: pointer
