--- a/src/styles/base/_typography.sass
+++ b/src/styles/base/_typography.sass
@@ -17,7 +17,8 @@ a
 
 h1,
 h2,
-h3
+h3,
+h4
   font-weight: $regular
   color: $white
   line-height: 1.2
@@ -26,6 +27,7 @@ h3
 h1,
 h2,
 h3,
+h4,
 p
   span,
   strong
@@ -40,7 +42,7 @@ h2
   font-size: 60px
   letter-spacing: 19.2px
 
-h3
+h4
   font-size: 35px
   letter-spacing: 11.2px
 
@@ -53,7 +55,7 @@ h3
     font-size: 53px
     letter-spacing: 16px
 
-  h3
+  h4
     font-size: 30px
     letter-spacing: 10px
 
@@ -67,7 +69,7 @@ h3
     font-size: 45px
     letter-spacing: 14px
 
-  h3
+  h4
     font-size: 25px
     letter-spacing: 10px
 
@@ -80,7 +82,7 @@ h3
     font-size: 35px
     letter-spacing: 14px
 
-  h3
+  h4
     font-size: 25px
     letter-spacing: 10px
 
@@ -93,7 +95,7 @@ h3
     font-size: 30px
     letter-spacing: 14px
 
-  h3
+  h4
     font-size: 22px
     letter-spacing: 10px
 
@@ -107,7 +109,7 @@ h3
     font-size: 25px
     letter-spacing: 14px
 
-  h3
+  h4
     font-size: 20px
     letter-spacing: 10px
 
