--- a/src/components/layout/Text/Article/Article.module.sass
+++ b/src/components/layout/Text/Article/Article.module.sass
@@ -1,12 +1,13 @@
 @import './src/styles/config'
 
 .article
-  color: white
+  color: $gray
 
   p
     font-size: 16px
-    margin-bottom: 10px
+    margin-bottom: 30px
     font-weight: $light
+    line-height: 1.6
 
     &:nth-last-child(1)
       margin-bottom: 0 !important
