--- a/src/components/layout/Text/Article/Article.module.sass
+++ b/src/components/layout/Text/Article/Article.module.sass
@@ -23,6 +23,11 @@
       font-size: 18px
       line-height: 1.8
 
+  .imgWrap
+    position: relative
+    margin-bottom: 50px
+    @include overlay(#000)
+
 @media screen and (max-width: 1599px)
   .article
     &.xl
