--- a/src/components/layout/Text/SectionTitle/SectionTitle.module.sass
+++ b/src/components/layout/Text/SectionTitle/SectionTitle.module.sass
@@ -16,6 +16,10 @@
     &.right
       text-align: right
 
+    &.transformNone
+      *
+        text-transform: unset
+
   .shadowText
     position: absolute
     top: 0
