--- a/src/styles/base/_typography.sass
+++ b/src/styles/base/_typography.sass
@@ -42,6 +42,9 @@ h2
   font-size: 60px
   letter-spacing: 19.2px
 
+h3
+  font-size: 48px
+
 h4
   font-size: 35px
   letter-spacing: 11.2px
@@ -54,6 +57,9 @@ h4
   h2
     font-size: 53px
     letter-spacing: 16px
+
+  h3
+    font-size: 42px
 
   h4
     font-size: 30px
@@ -69,6 +75,9 @@ h4
     font-size: 45px
     letter-spacing: 14px
 
+  h3
+    font-size: 36px
+
   h4
     font-size: 25px
     letter-spacing: 10px
@@ -81,6 +90,9 @@ h4
   h2
     font-size: 35px
     letter-spacing: 14px
+
+  h3
+    font-size: 31px
 
   h4
     font-size: 25px
@@ -95,6 +107,9 @@ h4
     font-size: 30px
     letter-spacing: 14px
 
+  h3
+    font-size: 26px
+
   h4
     font-size: 22px
     letter-spacing: 10px
@@ -108,6 +123,9 @@ h4
   h2
     font-size: 25px
     letter-spacing: 14px
+
+  h3
+    font-size: 22px
 
   h4
     font-size: 20px
