--- a/src/components/shared/Tags/Tags.module.sass
+++ b/src/components/shared/Tags/Tags.module.sass
@@ -6,6 +6,10 @@
   gap: 10px
 
   .tagItem
+    &.dark
+      .tag
+        background-color: $gray7
+        
     .tag
       display: block
       padding: 10px 14px
