--- a/src/components/layout/Text/Article/Article.module.sass
+++ b/src/components/layout/Text/Article/Article.module.sass
@@ -22,8 +22,9 @@
 
   .imgWrap
     position: relative
-    margin-bottom: 50px
+    margin-bottom: 45px
     border-radius: 4px
+    overflow: hidden
     @include overlay($second, .5, 0, unset)
 
 @media screen and (max-width: 1599px)
