--- a/src/components/shared/ArticleListAside/ArticleListAside.module.sass
+++ b/src/components/shared/ArticleListAside/ArticleListAside.module.sass
@@ -5,6 +5,9 @@
     margin-bottom: 30px
     max-width: 373px
 
+    &:nth-last-child(1)
+      margin-bottom: 0
+
     .listLink
       display: flex
       align-items: stretch
@@ -54,3 +57,12 @@
           line-height: 1
           color: $second
 
+@media screen and (max-width: 992px)
+  .articleListWrap
+    .listItem
+      max-width: 70%
+
+@media screen and (max-width: 599px)
+  .articleListWrap
+    .listItem
+      max-width: 100%
