--- a/src/styles/base/_typography.sass
+++ b/src/styles/base/_typography.sass
@@ -28,6 +28,8 @@ h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p
   span,
   strong
@@ -48,6 +50,9 @@ h3
 h4
   font-size: 35px
   letter-spacing: 11.2px
+
+h5
+  font-size: 20px
 
 @media screen and (max-width: 1599px)
   h1
