--- a/src/layouts/realizations/realizations.module.sass
+++ b/src/layouts/realizations/realizations.module.sass
@@ -1,6 +1,14 @@
 @import '../../styles/config'
 
-.description
-  position: relative
-  margin-top: -190px
-  z-index: 2
+.header
+  margin-bottom: 90px
+
+@media screen and (max-width: 1266px)
+  .header
+    margin-bottom: 60px
+
+@media screen and (max-width: 767px)
+  .header
+    margin-bottom: 40px
+
+
