--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,3 +6,6 @@
 // Components
 @import './src/styles/components/contact/contact'
 @import './src/styles/components/contact/contact'
+
+// Layout
+@import './src/styles/layout/slider'
