add contact types

--- a/src/components/shared/Contact/Contact.module.sass
+++ b/src/components/shared/Contact/Contact.module.sass
@@ -5,6 +5,13 @@
   align-items: flex-start
   justify-content: space-between
 
+  &.basic
+    .formWrap
+      max-width: unset
+
+      .textarea
+        max-width: 750px
+
   .contactInfo
     display: flex
     flex-direction: column
