add textarea styles && fix blog console errors

--- a/src/components/Article/ArticleTile/ArticleTile.module.sass
+++ b/src/components/Article/ArticleTile/ArticleTile.module.sass
@@ -5,6 +5,8 @@
   align-items: stretch
   justify-content: space-between
   background-color: $gray4
+  border-radius: 4px
+  overflow: hidden
 
   .imgWrap
     display: block
