add about us page sections

--- a/src/layouts/aboutUs/aboutUs.module.sass
+++ b/src/layouts/aboutUs/aboutUs.module.sass
@@ -1,14 +1,51 @@
 @import '../../styles/config'
 
-.header
-  margin-bottom: 90px
+.aboutUsPage
+  margin-top: -245px
 
-@media screen and (max-width: 1266px)
-  .header
-    margin-bottom: 60px
+  .descriptionWrap
+    max-width: 925px
+    margin: 0 auto 150px
+
+    .descriptionTitle
+      margin-bottom: 55px !important
+
+    .description
+      opacity: .5
+      p
+        line-height: 1.8
+
+@media screen and (max-width: 1599px)
+  .aboutUsPage
+    margin-top: -215px
+
+    .descriptionWrap
+      margin: 0 auto 100px
+
+      .descriptionTitle
+        margin-bottom: 45px !important
+
+@media screen and (max-width: 992px)
+  .aboutUsPage
+    margin-top: -190px
+
+    .descriptionWrap
+      margin: 0 auto 80px
+
+      .descriptionTitle
+        margin-bottom: 30px !important
 
 @media screen and (max-width: 767px)
-  .header
-    margin-bottom: 40px
+  .aboutUsPage
+    margin-top: -155px
+
+    .descriptionWrap
+      margin: 0 auto 40px
+
+      .descriptionTitle
+        margin-bottom: 20px !important
+
+        *
+          font-size: 30px !important
 
 
