add map in about us page

--- a/src/layouts/aboutUs/aboutUs.module.sass
+++ b/src/layouts/aboutUs/aboutUs.module.sass
@@ -15,6 +15,12 @@
       p
         line-height: 1.8
 
+  .ourSpeciality
+    margin-bottom: 200px
+
+  .map
+    margin-bottom: 235px
+
 @media screen and (max-width: 1599px)
   .aboutUsPage
     margin-top: -215px
@@ -25,6 +31,12 @@
       .descriptionTitle
         margin-bottom: 45px !important
 
+    .ourSpeciality
+      margin-bottom: 130px
+
+    .map
+      margin-bottom: 150px
+
 @media screen and (max-width: 992px)
   .aboutUsPage
     margin-top: -190px
@@ -34,6 +46,12 @@
 
       .descriptionTitle
         margin-bottom: 30px !important
+
+    .ourSpeciality
+      margin-bottom: 80px
+
+    .map
+      margin-bottom: 80px
 
 @media screen and (max-width: 767px)
   .aboutUsPage
@@ -47,5 +65,11 @@
 
         *
           font-size: 30px !important
+
+    .ourSpeciality
+      margin-bottom: 40px
+
+    .map
+      margin-bottom: 40px
 
 
