add products page

--- a/src/styles/base/_buttons.sass
+++ b/src/styles/base/_buttons.sass
@@ -66,6 +66,9 @@
       transform: translateY(-50%)
       transition: .3s ease
 
+  &.sm
+    padding: 10px 20px
+
 @media screen and (max-width: 767px)
   .button
     border-radius: 28px
