add materials type

--- a/src/layouts/product/product.module.sass
+++ b/src/layouts/product/product.module.sass
@@ -3,6 +3,12 @@
 .productPage
   position: relative
 
+  .main
+    max-width: 750px
+
+  strong
+    font-weight: 600
+
   .productTitle
     position: absolute !important
     top: 0
@@ -13,6 +19,22 @@
       letter-spacing: normal !important
       font-weight: 600
 
-  .descriptionWrap
-    max-width: 750px
+  .descriptionWithTitle
+    margin-bottom: 30px
+
+    p
+      margin-bottom: 0
+
+  .descriptionWithTitle,
+  .list,
+  .materials
+    margin-bottom: 30px !important
+
+  .releaseDate
+    color: $gray
+    font-size: 16px
+    font-weight: 300
+    margin-top: 40px
+
+
 
