--- a/src/components/sections/ProductGallery/ProductGallery.module.sass
+++ b/src/components/sections/ProductGallery/ProductGallery.module.sass
@@ -1,1 +1,13 @@
 @import './src/styles/config'
+
+.galleryWrap
+  .imgWrap
+    @include overlay($second, 0.5, 0, unset)
+    @include imagePlaceholder()
+
+    .img
+      width: 100%
+      height: 100%
+      background-position: center center
+      background-repeat: no-repeat
+      background-size: cover
