--- a/src/styles/layout/_slider.sass
+++ b/src/styles/layout/_slider.sass
@@ -31,4 +31,34 @@
     right: 0
     justify-content: flex-end
 
+.gallerySwiper
+  .swiper
+    width: 200px
+    height: 510px
+
+    .swiper-slide
+      max-height: 143px
+      margin-bottom: 40px
+      border-radius: 4px
+      overflow: hidden
+
+  &.swiperNav
+    position: relative
+    z-index: 4
+
+    .swiper-button-prev,
+    .swiper-button-next
+      width: 55px
+      height: unset !important
+      transform: rotate(90deg)
+      left: 40%
+
+    .swiper-button-prev
+      top: 0
+
+    .swiper-button-next
+      top: unset
+      bottom: 0
+
+
 
