--- a/src/styles/layout/_slider.sass
+++ b/src/styles/layout/_slider.sass
@@ -60,5 +60,33 @@
       top: unset
       bottom: 0
 
+@media screen and (max-width: 1060px)
+  .gallerySwiper
+    .swiper
+      width: 18.86vw
+      height: 48.11vw
+
+      .swiper-slide
+        max-height: 13.49vw
+        margin-bottom: 3.77vw
+
+    &.swiperNav
+      position: relative
+      z-index: 4
+
+      .swiper-button-prev,
+      .swiper-button-next
+        width: 55px
+        height: unset !important
+        transform: rotate(90deg)
+        left: 40%
+
+      .swiper-button-prev
+        top: 0
+
+      .swiper-button-next
+        top: unset
+        bottom: 0
+
 
 
