--- a/src/components/sections/ProductGallery/ProductGallery.module.sass
+++ b/src/components/sections/ProductGallery/ProductGallery.module.sass
@@ -40,9 +40,20 @@
   .galleryWrap
     flex-direction: column
 
+    .sliderWrap
+      width: 100%
+
+    .galleryImg
+      max-width: 100%
+      height: 55vw
+      margin-bottom: 10px
+
     .sliderDesktop
       display: none
 
     .sliderMobile
       display: flex
+      width: 100%
+      max-height: 15vw
+
 
