--- a/src/layouts/product/product.module.sass
+++ b/src/layouts/product/product.module.sass
@@ -20,6 +20,12 @@
       letter-spacing: normal !important
       font-weight: 600
 
+  .main
+    margin-bottom: 0
+
+  .productGalleryWrap
+    margin-bottom: 45px
+
   .descriptionWithTitle
     margin-bottom: 30px
 
@@ -36,6 +42,60 @@
     font-size: 16px
     font-weight: 300
     margin-top: 40px
+    margin-bottom: 140px
+
+  .asideTypes
+    position: absolute
+    top: 0
+    left: 0
+    transform: translateX(calc(-100% + 10px))
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+    align-items: flex-end
+    padding-top: 30px
+
+    .button
+      display: block
+      margin-bottom: 20px
+      font-size: 12px
+      color: $main
+      max-width: 148px
+
+@media screen and (max-width: 1520px)
+  .productPage
+
+    .releaseDate
+      margin-bottom: 30px
+
+    .asideTypes
+      position: unset
+      transform: unset
+      flex-direction: row
+      justify-content: flex-start
+      flex-wrap: wrap
+      align-items: center
+      gap: 20px
+
+      .button
+        max-width: unset
+
+@media screen and (max-width: 767px)
+  .productPage
+
+    .asideTypes
+      position: unset
+      transform: unset
+      flex-direction: row
+      justify-content: flex-start
+      flex-wrap: wrap
+      align-items: center
+      gap: unset
+      padding-top: 20px
+
+      .button
+        margin: 0 10px 10px 0
+
 
 
 
