add dynamic logo

--- a/src/components/layout/Navbar/Navbar.module.sass
+++ b/src/components/layout/Navbar/Navbar.module.sass
@@ -19,9 +19,11 @@ $burgerBarHeight: 2px
     transform: translateY(-100%)
 
   .logoWrap
+    width: 100%
+    max-width: 215px
+
     .logo
       max-height: 40px
-
 
   .main
     display: flex
@@ -71,10 +73,16 @@ $burgerBarHeight: 2px
       padding: 20px
 
     .logoWrap
+      max-width: 155px
+
       .logo
         max-height: 30px
 
+    .desktopLang
+      display: none
+
     .main
+
       .phone
         font-size: 14px
 
@@ -167,6 +175,8 @@ $burgerBarHeight: 2px
       padding: 15px
 
     .logoWrap
+      max-width: 130px
+
       .logo
         max-height: 25px
 
