--- a/src/components/layout/LanguageSwitcher/LanguageSwitcher.module.sass
+++ b/src/components/layout/LanguageSwitcher/LanguageSwitcher.module.sass
@@ -5,7 +5,10 @@
 
   .item
     margin-left: 10px
-    font-size: 15px
+    font-size: 13px
+
+    &:nth-child(1)
+      margin: 0
 
     &.active
       *
